# ce-yt-dlp

./: .gitignore  README.md
plugin/: README.md  pyproject.toml
plugin/docs/: error_code.md
plugin/yt_dlp_plugins/: custom_youtube_dl.py  error.py
plugin/yt_dlp_plugins/docs/: custom_ejs.md  hook_detail.md  sabr并发详解.md
plugin/yt_dlp_plugins/downloader/: http.py  sabr.py
plugin/yt_dlp_plugins/extractor/: custom_instagram.py  custom_vimeo.py  custom_youtube.py
